--- a/kube-prom-values.yaml
+++ b/kube-prom-values.yaml
@@ -4,7 +4,7 @@ grafana:
 
   grafana.ini:
     server:
-      root_url: "http://<balancer_ip>/grafana/"
+      root_url: "http://51.250.44.216/grafana/"
       serve_from_sub_path: true
 
   ingress:
