--- a/app_all_in_one.yml
+++ b/app_all_in_one.yml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
         - name: diploma-app
-          image: shibegora/diploma_app:__TAG__
+          image: shibegora/diploma_app
           ports:
             - containerPort: 80
 ---
